src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CTI_Id__c</fullName>
        <externalId>true</externalId>
        <label>CTI Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Duration_In_Seconds__c</fullName>
        <label>Call Duration In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_End_Time__c</fullName>
        <label>Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Start_Time__c</fullName>
        <label>Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_name__c</fullName>
        <label>Client name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Follow_up_task__c</fullName>
        <label>Create Follow-up task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <label>Document Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <formula>IF(Document_Link__c!='', HYPERLINK('/servlet/servlet.FileDownload?file='+Document_Link__c, 'Document', "_blank") ,'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Time__c</fullName>
        <label>Due Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5:00 A.M</fullName>
                </value>
                <value>
                    <fullName>5:30 A.M</fullName>
                </value>
                <value>
                    <fullName>6:00 A.M</fullName>
                </value>
                <value>
                    <fullName>6:30 A.M</fullName>
                </value>
                <value>
                    <fullName>7:00 A.M</fullName>
                </value>
                <value>
                    <fullName>7:30 A.M</fullName>
                </value>
                <value>
                    <fullName>8:00 A.M</fullName>
                </value>
                <value>
                    <fullName>8:30 A.M</fullName>
                </value>
                <value>
                    <fullName>9:00 A.M</fullName>
                </value>
                <value>
                    <fullName>9:30 A.M</fullName>
                </value>
                <value>
                    <fullName>10:00 A.M</fullName>
                </value>
                <value>
                    <fullName>10:30 A.M</fullName>
                </value>
                <value>
                    <fullName>11:00 A.M</fullName>
                </value>
                <value>
                    <fullName>11:30 A.M</fullName>
                </value>
                <value>
                    <fullName>12:00 P.M</fullName>
                </value>
                <value>
                    <fullName>12:30 P.M</fullName>
                </value>
                <value>
                    <fullName>1:00 P.M</fullName>
                </value>
                <value>
                    <fullName>1:30 P.M</fullName>
                </value>
                <value>
                    <fullName>2:00 P.M</fullName>
                </value>
                <value>
                    <fullName>2:30 P.M</fullName>
                </value>
                <value>
                    <fullName>3:00 P.M</fullName>
                </value>
                <value>
                    <fullName>3:30 P.M</fullName>
                </value>
                <value>
                    <fullName>4:00 P.M</fullName>
                </value>
                <value>
                    <fullName>4:30 P.M</fullName>
                </value>
                <value>
                    <fullName>5:00 P.M</fullName>
                </value>
                <value>
                    <fullName>5:30 P.M</fullName>
                </value>
                <value>
                    <fullName>6:00 P.M</fullName>
                </value>
                <value>
                    <fullName>6:30 P.M</fullName>
                </value>
                <value>
                    <fullName>7:00 P.M</fullName>
                </value>
                <value>
                    <fullName>7:30 P.M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Followup_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if you are creating a task</inlineHelpText>
        <label>Follow-up Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>ActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Login_Time__c</fullName>
        <label>Last Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Officer</relationshipLabel>
        <relationshipName>LoanOfficer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubjectType__c</fullName>
        <label>CTI Subject Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Left a Voicemail</fullName>
                </value>
                <value>
                    <fullName>Left message with other</fullName>
                </value>
                <value>
                    <fullName>Unanswered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Type__c</fullName>
        <label>Subject Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Left a Voice Mail</fullName>
                </value>
                <value>
                    <fullName>Left message with Other</fullName>
                </value>
                <value>
                    <fullName>Unanswered</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Grouping__c</fullName>
        <formula>IF(CONTAINS( Subject, 'Document has been uploaded'), 'Document Task', 
IF(CONTAINS( Subject, 'Counseling Expiration Date is approaching on loan ID'), 'Counseling Date Expiration Task', 
IF(CONTAINS( Subject, 'Appraisal Expiration Date is approaching on loan'), 'Appraisal Expiration Task', 
IF(CONTAINS( Subject, 'Loan Status'), 'Loan Status Task', 
IF(CONTAINS( Subject, 'FHA Case Number Expiration Date is approaching on loan'), 'FHA Case Number Expiration Task', 
IF(CONTAINS( Subject, 'Notes logged on the'), 'Notes Task', 
IF(CONTAINS( Subject, 'Underwriting Clear to Close'), 'UW clear to close Task',
IF(CONTAINS( Subject, 'Change in Circumstance'), 'CIC Task', 
IF(CONTAINS( Subject, 'Loan has been Conditionally Approved'), 'Conditionally Approved',
IF(CONTAINS( Subject, 'Payoff Expiration'), 'Payoff Expiration Task', 
IF(CONTAINS( Subject, 'A new Condition has been added to'), 'Condition Task',
IF(CONTAINS( Subject, 'Loan is in Conditionally Approved status for 31 Days'), 'Aged Task',

''))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userLoginId__c</fullName>
        <label>userLoginId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Additional_Emails__c</fullName>
        <inlineHelpText>Please separate emails with Comma[ , ]</inlineHelpText>
        <label>Send Email to External Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Duration_mins__c</fullName>
        <label>Duration (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Host_Id__c</fullName>
        <label>Host Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__IsExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__IsZoomMeeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Zoom Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_Url__c</fullName>
        <label>Join Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_before_host__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Let users join the meeting before the host arrives</inlineHelpText>
        <label>Join before host</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Make_it_Zoom_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This option will schedule a zoom meeting and put the meeting link in the description</inlineHelpText>
        <label>Schedule a Zoom Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Participant_Count__c</fullName>
        <label>Participant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Participants__c</fullName>
        <label>Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Send email to Contact or Lead, Event Invitees and External Attendees while creating Zoom Meeting or Resend email when this field is subsequently checked after creating Zoom Meeting.</inlineHelpText>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url_1__c</fullName>
        <label>Start Url 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url_2__c</fullName>
        <label>Start Url 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url_3__c</fullName>
        <label>Start Url 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__UUID__c</fullName>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Use_personal_Zoom_meeting_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use my Zoom personal meeting id</inlineHelpText>
        <label>Use my Zoom PMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Creation_Status__c</fullName>
        <label>Zoom Meeting Creation Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_End_Time__c</fullName>
        <label>Zoom Meeting End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Id__c</fullName>
        <label>Zoom Meeting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Start_Time__c</fullName>
        <label>Zoom Meeting Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Status__c</fullName>
        <label>Zoom Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Status_fr__c</fullName>
        <formula>if(  ISBLANK(TEXT(zoom_app__Zoom_Meeting_Status__c)),'Open',TEXT(zoom_app__Zoom_Meeting_Status__c))</formula>
        <label>Zoom Meeting Status</label>
        <type>Text</type>
    </fields><enableFeeds>false</enableFeeds><sharingModel>Private</sharingModel>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>